Remove location guess from applicant's view of initial application.
It's kind of creepy, since it may not match what they provided in their
Comrade sign up.

--- a/home/templates/home/snippet/time_commitment_overview_for_applicant.html
+++ b/home/templates/home/snippet/time_commitment_overview_for_applicant.html
@@ -19,9 +19,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col">
-									<p>Location: <b>{% with location=application.applicant.get_city_country %}{% if location.0 %}{{ location.0}}, {% endif %}{% if location.1 %}{{ location.1 }}{% endif %}
-										{% if not location.0 and not location.1 %}Unknown{% endif %}{% endwith %}</b>
-									<br>Applicant is enrolled at <a href="{{ application.schoolinformation.university_website }}">{{ application.schoolinformation.university_name }}</a>
+									Applicant is enrolled at <a href="{{ application.schoolinformation.university_website }}">{{ application.schoolinformation.university_name }}</a>
 									<br>Degree: {{ application.schoolinformation.degree_name }}
 									{% if application.schoolinformation.current_academic_calendar %}
 									<br><a href="{{ application.schoolinformation.current_academic_calendar }}">Current term academic calendar</a>
