Add a way for coding school students to say they'll quit their course/school.
Many people do self-paced online courses, and they're happy to quit
working on that course during their internship. Allow them to state they
can do so, and then don't count that course hours towards their
full-time commitments.

Add tests for making sure people are rejected if they're doing more than
20 hours of courses a week and they say they won't quit. Make sure
people who do want to quit or do 20 hours or less have their initial
application put into the pending state.

--- a/home/templates/home/snippet/time_commitments.html
+++ b/home/templates/home/snippet/time_commitments.html
@@ -18,6 +18,7 @@
 		<li>Date your coding school or online course ends: <strong>{{ course.end_date|date:"F d, Y" }}</strong></li>
 		<li>Maximum hours per week spent on coursework, exercises, homework, and studying: <strong>{{ course.hours_per_week }}</strong></li>
 		<li>Description of organization offering courses and course name and description: <strong>{{ course.description }}</strong></li>
+		{% if course.quit_on_acceptance %}<li>Applicant has indicated they will quit this coding school or stop their online courses if they are accepted as an Outreachy intern.</li>{% endif %}
 	</ul>
 {% endfor %}
 
