--- a/home/templates/home/eligibility_wizard_noncollege_school_info.html
+++ b/home/templates/home/eligibility_wizard_noncollege_school_info.html
@@ -27,7 +27,35 @@ If your coding school doesn't have courses, fill out your time commitments in on
 	<div class="card border-info mb-3">
 		<div class="card-header text-white bg-info">Course #{{ forloop.counter }}</div>
 	</div>
-        {% include "bootstrap_card_form.html" with form=form only %}
+	{% for field in form.visible_fields %}
+		{% if 'Quit' in field.label_tag %}
+			<div class="form-group card">
+				<div class = "card-body">
+					<p>
+					{{ field.errors }}
+					{{ field }}
+					{{ field.help_text }}
+					</p>
+				</div>
+			</div>
+		{% else %}
+			<div class="form-group card">
+				{{ field.errors }}
+				<div class = "card-header">
+					{{ field.label_tag|safe }}
+				</div>
+				<div class = "card-body">
+					{{ field }}
+				</div>
+				{% if field.help_text %}
+				<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
+				{% endif %}
+			</div>
+		{% endif %}
+	{% endfor %}
+	{% for hidden in form.hidden_fields %}
+		{{ hidden }}
+	{% endfor %}
     {% endfor %}
 {% else %}
     {% include "bootstrap_card_form.html" with form=wizard.form only %}
