--- a/home/templates/home/snippet/time_commitment_overview_for_applicant.html
+++ b/home/templates/home/snippet/time_commitment_overview_for_applicant.html
@@ -52,6 +52,7 @@
 							<ul>
 								<li>{{ course.hours_per_week }} hours per week from {{ course.start_date|date:"Y-m-d" }} to {{ course.end_date|date:"Y-m-d" }}.</li>
 								<li>Description of course work and organization offering courses: {{ course.description }}</li>
+								{% if course.quit_on_acceptance %}<li>Applicant has indicated they will quit this coding school or stop their online courses if they are accepted as an Outreachy intern.</li>{% endif %}
 							</ul>
 						{% endfor %}
 						</ul>
