--- a/home/templates/home/midpointinternfeedback_form.html
+++ b/home/templates/home/midpointinternfeedback_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Initial internship feedback
+Midpoint internship feedback
 {% endblock %}
 
 {% block content %}
