--- a/home/templates/home/midpointmentorfeedback_form.html
+++ b/home/templates/home/midpointmentorfeedback_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Initial mentor feedback
+Midpoint mentor feedback
 {% endblock %}
 
 {% block content %}
