Fix typo in staff feedback review title

--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -2,7 +2,7 @@
 {% load approval_status %}
 
 {% block title %}
-Initial Feedback for current_round.official_name
+Initial Feedback for {{ current_round.official_name }}
 {% endblock %}
 
 {% block content %}
