--- a/home/templates/home/midpoint_feedback.html
+++ b/home/templates/home/midpoint_feedback.html
@@ -2,7 +2,7 @@
 {% load approval_status %}
 
 {% block title %}
-Midpoint Feedback for current_round.official_name
+Midpoint Feedback for {{ current_round.official_name }}
 {% endblock %}
 
 {% block content %}
