--- a/home/templates/home/snippet/project_landing_snippet.html
+++ b/home/templates/home/snippet/project_landing_snippet.html
@@ -50,51 +50,59 @@ This community requires applicants to complete a tutorial before they can make t
 	{{ project.contribution_tasks|safe }}
 {% endif %}
 
-<h3>How do I work with the {{ community.name }} community?</h3>
-<p>Community members are there to answer your questions, give you feedback, and help you grow your skills.
-During this internship project, you'll be interacting with a team of {{ project.get_community_size_display|lower }}.
-The community has been accepting contributions from people from around the world for {{ project.get_longevity_display|lower }}.
-</p>
-
 {% with channels=project.communicationchannel_set.all %}
 	{% if channels %}
-		<p>Community members (and Outreachy applicants) discuss contributions in public communication channels.
-		It can be intimidating to work in the public, but mentors are always available to encourage you via private message or email.
-		We hope you'll introduce yourself on the public project channels and ask for help when you get stuck.
+		<h3>How do I work with the {{ community.name }} community?</h3>
+		<p>
+		Outreachy applicants can get help and feedback from both mentors and community members.
+		Community members discuss their contributions in a public chat.
+		Outreachy applicants can often learn from those discussions.
 		</p>
-		<h3>{{ community.name }} public communication channels</h3>
+		<p>Please introduce yourself on the public project chat:
+		<ul>
 		{% for channel in channels %}
-			<p>
-			This team uses {{ channel.tool_name }} to communicate.
+			<li><b>{{ channel.tool_name }}</b> -
 			{% if channel.communication_help %}
 				You can find helpful documentation about this communication tool <a href="{{ channel.communication_help }}">here</a>. 
 			{% endif %}
-			</p>
 			{% if channel.norms %}
-				<p>Once you join the project's communication channel,
+				Once you join the project's communication channel,
 				the mentors have some additional instructions for you to follow:</p> {{ channel.norms|safe }}
 			{% endif %}
 			{% if channel.url %}
-				<p>
 				{% with url_parsed=channel.url_parsed %}
-				You can join this project's communication channel by
 				{% if url_parsed.scheme == 'irc' %}
-				joining the <a href="https://kiwiirc.com/client/{{ url_parsed.netloc }}{{ url_parsed.path }}" target="_blank">#{{ url_parsed.path|slice:"1:" }} IRC channel on {{ url_parsed.netloc }}</a>.
+					{% if url_parsed.netloc == 'freenode.net' or url_parsed.netloc == 'irc.freenode.net' or url_parsed.netloc == 'freenode.org' or url_parsed.netloc == 'irc.freenode.org' %}
+						<a href="https://webchat.freenode.net/?channels={{ url_parsed.path|slice:"1:" }}" target="_blank">Follow this link</a> to join this project's public chat.
+					{% elif url_parsed.netloc == 'oftc.net' or url_parsed.netloc == 'irc.oftc.net' or url_parsed.netloc == 'irc.debian.org' %}
+						<a href="https://webchat.oftc.net/?channels={{ url_parsed.path|slice:"1:" }}" target="_blank">Follow this link</a> to join this project's public chat.
+					{% else %}
+						<a href="https://kiwiirc.com/nextclient/{{ url_parsed.netloc }}{{ url_parsed.path }}" target="_blank">Follow this link</a> to join this project's public chat.
+					{% endif %}
+					If you are asked for username, pick any username!
+					You will not need a password to join this chat.
 				{% else %}
-				<a href="{{ channel.url }}" target="_blank">following this link</a>.
+					<a href="{{ channel.url }}" target="_blank">Follow this link</a> to join this project's public chat.
 				{% endif %}
 				{% endwith %}
-				</p>
 			{% endif %}
 			{% if channel.instructions %}
 				{{ channel.instructions|safe }}
 			{% endif %}
+			</li>
 		{% endfor %}
+		</ul>
+		</p>
+		<p>Outreachy mentors will often be in the community public chat. The project mentor's usernames are: {% for approval in project.get_approved_mentors %} {{ approval.communication_channel_username }}, {% endfor %}</p>
 	{% endif %}
 {% endwith %}
+</p>
 
 <h3>Who will I work with?</h3>
 <p>Each Outreachy intern works remotely with one or more mentors. Most Outreachy mentors only work with one intern per round. Mentors are your guides in learning more about free and open source software, technical and non-technical skills, and will always be there when you get stuck.</p>
+
+<p>During this internship project, you'll be interacting with a team of {{ project.get_community_size_display|lower }}.
+The project has been accepting contributions from people from around the world for {{ project.get_longevity_display|lower }}.</p>
 
 {% with approved_mentors=project.get_approved_mentors %}
 	{% if approved_mentors %}
