Unify classmate statistics into one model function
This significantly reduces copy-paste code, and allows reusing query
results instead of re-running the same queries again.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -78,7 +78,9 @@
 	{% endwith %}
 	{% if application.schoolinformation %}
 		<li><span class="badge badge-warning">Warning</span> This is a student from {% include 'home/snippet/applicant_location.html' %}.</li>
-		<li>Classmates: {{ application.schoolinformation.acceptance_rate|floatformat }}% accepted, {{ application.schoolinformation.time_rejection_rate|floatformat }}% rejected for full-time commitments</li>
+		{% with stats=application.schoolinformation.classmate_statistics %}
+		<li>Classmates: {{ stats.acceptance_rate|floatformat }}% accepted, {{ stats.time_rejection_rate|floatformat }}% rejected for full-time commitments</li>
+		{% endwith %}
 	{% endif %}
 		<li>
 			{% if application.is_not_under_export_control == False %}
