--- a/home/templates/home/snippet/time_commitment_overview.html
+++ b/home/templates/home/snippet/time_commitment_overview.html
@@ -47,7 +47,9 @@
 								</div>
 								<div class="col">
 									{% if tcs.school_time_commitments %}
-									<p>Classmates with the same school website:<br>{{ application.schoolinformation.total_classmates }} applied, {{ application.schoolinformation.pending_classmates }} pending, {{ application.schoolinformation.acceptance_rate|floatformat }}% accepted, {{ application.schoolinformation.time_rejection_rate|floatformat }}% rejected for full-time commitments</p>
+									{% with stats=application.schoolinformation.classmate_statistics %}
+									<p>Classmates with the same school website:<br>{{ stats.total_classmates }} applied, {{ stats.pending_classmates }} pending, {{ stats.acceptance_rate|floatformat }}% accepted, {{ stats.time_rejection_rate|floatformat }}% rejected for full-time commitments</p>
+									{% endwith %}
 									<p>Possible school term matches:</p>
 									<ul>
 										{% with terms=application.schoolinformation.find_official_terms %}
